Added power-up Orb type statistics.

*****

1.12.0 (21)

Added new music track for snow, sand, and rock levels.
Added Wisp Slayer Achievement.
Added defeat style statistics.
Fixed a bug that never gave credit for defeating Rock Walkers.
Added engine-specific default value for full-screen flag to help with a bug.
Added music cache reloading to help with a bug.

*****

1.11.0 (20)

Added Lightning Orb invincibility power-up.
Added new music track for cave levels.
Fixed a bug that sometimes displayed Monarchs wearing the wrong clothing.
Fixed bugs that prevented sound effects for stomping on some monsters.

*****

1.10.0 (19)

Added coat, hair ribbons, and bowler hat.
Added Nest Egg Achievement.

*****

1.9.0 (18)

Added zebras.
Added orioles, parakeets, and purple martins.
Added matching bonus game.
Added Empty Nest Achievement.

*****

1.8.1 (17)

Added statistics.
Fixed a bug that trapped player in ceiling after falling in cave levels in auto-run mode.
Fixed a bird eye menu bug.

*****

1.8.0 (16)

Added birds.
Added glasses.
Added new eyes.
Added menu option to change secondary color of multi-color animals.
Fixed a Monarch Achievement bug; it can now be achieved with the Royal Dress.
Added Demander and Collector Achievements.

*****

1.7.0 (15)

Added pandas.
Added royal dress.
Added new eyes.
Added Consumer Achievement.

*****

1.6.0 (14)

Rock worlds.
Added menu options for difficulty settings.
Added Giant Slayer and Lionheart Achievements.

*****

1.5.3 (13)

Added immersive mode.
Forced auto-run mode if multi-touch feature not detected.
Added infrastructure for adjustable difficulty settings.
Improved consistency of replaying levels.
Added new Achievements.
Added mouse support.
Fixed menu placement bugs.

*****

1.5.2 (12)

Fixed a bug which hid old Profile after creating new Profile on some devices.
Added new Achievements for collecting Gems and hitting blocks.
Added new Goals for blue Gems.

*****

1.5.1 (11)

Fixed graphical bugs in level backgrounds.
