@@ -1,4 +1,5 @@
 Added power-up Orb type statistics.
+Fixed a bug that didn't destroy Rock Walkers at level end.
 
 *****
 
